...
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvMainTagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="GET STARTED"
        android:textSize="16sp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="32dp"
...
