...
            android:text="SIGN IN"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <TextView
            android:id="@+id/btnGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Register Here"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
...
